Stop ignoring warnings for libawt_lwawt

XMLWordPrintable

    • b85
    • Not verified

        When JDK-8074859 (Turn on warnings as error) was introduced, this library needed special treatment. Since not all warnings were fixed or could be disabled, this library was given an exemption from the warnings-as-errors behavior.

        The exemption is implemented by the addition of the line
          WARNINGS_AS_ERRORS_clang := false, \
        to make/lib/Awt2dLibraries.gmk for libawt_lwawt.

        Please fix the warnings and remove the exemption for this library.

        This library also has additional warnings disabled, see JDK-8074825. It might make sense to fix these in tandem. But note that fixing the warnings that block warnings-as-errors for this libary is more urgent, since it has the potential to hide future warnings.

              Assignee:
              Sergey Bylokhov
              Reporter:
              Magnus Ihse Bursie
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: