8079965: Stop ignoring warnings for libawt_lwawt

Reviewed-by: prr, ihse