jdk/src/java.desktop/macosx/native/libawt_lwawt/awt/JavaComponentAccessibility.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, 2012, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2011, 2015, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,9 +23,9 @@
  * questions.
  */
 
-#import <AppKit/AppKit.h>
-#import <JavaNativeFoundation/JavaNativeFoundation.h>
+#include "jni.h"
 
+#import <AppKit/AppKit.h>
 
 //#define JAVA_AX_DEBUG 1
 //#define JAVA_AX_NO_IGNORES 1
